[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entities/Interface/StartScreen/GamesList.gd" type="Script" id=1]

[node name="Control" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Servers" type="VBoxContainer" parent="."]
margin_right = 398.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="Servers"]
margin_right = 398.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ServerList" type="VBoxContainer" parent="Servers/CenterContainer"]
margin_left = 199.0
margin_top = 300.0
margin_right = 199.0
margin_bottom = 300.0

[node name="Description" type="VBoxContainer" parent="."]
margin_left = 402.0
margin_right = 800.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="Description"]
margin_right = 398.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
color = Color( 1, 1, 1, 0 )

[node name="ScrollContainer" type="ScrollContainer" parent="Description"]
margin_top = 24.0
margin_right = 398.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Description/ScrollContainer"]
margin_right = 398.0
margin_bottom = 528.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ServerTitle" type="Label" parent="Description/ScrollContainer/VBoxContainer"]
margin_right = 398.0
margin_bottom = 14.0

[node name="HBoxContainer" type="HBoxContainer" parent="Description/ScrollContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 398.0
margin_bottom = 18.0

[node name="ColorRect" type="ColorRect" parent="Description/ScrollContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 398.0
margin_bottom = 22.0
rect_min_size = Vector2( 10, 0 )
color = Color( 1, 1, 1, 0 )

[node name="Players" type="Label" parent="Description/ScrollContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 398.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Description"]
margin_left = 322.0
margin_top = 556.0
margin_right = 398.0
margin_bottom = 576.0
size_flags_horizontal = 8

[node name="Connect" type="Button" parent="Description/HBoxContainer"]
visible = false
margin_right = 64.0
margin_bottom = 20.0
text = "Connect"

[node name="BackButton" type="Button" parent="Description/HBoxContainer"]
margin_right = 42.0
margin_bottom = 20.0
size_flags_horizontal = 8
text = "Back"

[node name="ColorRect" type="ColorRect" parent="Description/HBoxContainer"]
margin_left = 46.0
margin_right = 76.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 0 )
color = Color( 1, 1, 1, 0 )

[node name="ColorRect2" type="ColorRect" parent="Description"]
margin_top = 580.0
margin_right = 398.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 20 )
color = Color( 1, 1, 1, 0 )

[connection signal="pressed" from="Description/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
